RESOLVED FIXED197916
inputmode="numeric" should show a number pad with digits 0-9, instead of the numeric keyplane
https://bugs.webkit.org/show_bug.cgi?id=197916
Summary inputmode="numeric" should show a number pad with digits 0-9, instead of the ...
Wenson Hsieh
Reported 2019-05-15 10:02:48 PDT
SSIA
Attachments
Patch (7.00 KB, patch)
2019-05-15 10:38 PDT, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2019-05-15 10:23:54 PDT
Wenson Hsieh
Comment 2 2019-05-15 10:38:56 PDT
Wenson Hsieh
Comment 3 2019-05-15 11:56:15 PDT
Comment on attachment 369969 [details] Patch Thanks for the review!
WebKit Commit Bot
Comment 4 2019-05-15 12:24:22 PDT
Comment on attachment 369969 [details] Patch Clearing flags on attachment: 369969 Committed r245338: <https://trac.webkit.org/changeset/245338>
WebKit Commit Bot
Comment 5 2019-05-15 12:24:24 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6 2019-07-30 09:12:17 PDT
*** Bug 200226 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.